# sanebox-cli

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sanebox_cli/: __init__.py  api.py  auth.py  cli.py
tests/: test_api.py  test_auth.py
